Fix overflow

--- a/src/site/styles/user/layout-fixes.scss
+++ b/src/site/styles/user/layout-fixes.scss
@@ -48,3 +48,8 @@ footer {
 footer a {
     text-decoration: none;
 }
+
+/* Fix overflow, so button and toc position is correct */
+html, body {
+    overflow-x: visible;
+}
